force-app/main/default/objects/Crypto__e/Crypto__e.object-meta.xml
<CustomObject>
    <label>Crypto</label>
    <pluralLabel>Crypto</pluralLabel>
</CustomObject>