force-app/main/default/objects/Crypto__e/fields/base__c.field-meta.xml
<CustomField>
    <fullName>base__c</fullName>
    <label>base</label>
    <length>15</length>
    <type>Text</type>
</CustomField>