force-app/main/default/objects/Crypto__e/fields/ChartIndicator__c.field-meta.xml
<CustomField>
    <fullName>ChartIndicator__c</fullName>
    <defaultValue>10</defaultValue>
    <label>ChartIndicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>