force-app/main/default/objects/Crypto__e/fields/direction__c.field-meta.xml
<CustomField>
    <fullName>direction__c</fullName>
    <label>direction</label>
    <length>5</length>
    <type>Text</type>
</CustomField>