force-app/main/default/objects/Crypto__e/fields/priceusd__c.field-meta.xml
<CustomField>
    <fullName>priceusd__c</fullName>
    <label>priceusd</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>