force-app/main/default/objects/Crypto__e/fields/quote__c.field-meta.xml
<CustomField>
    <fullName>quote__c</fullName>
    <label>quote</label>
    <length>15</length>
    <type>Text</type>
</CustomField>