force-app/main/default/objects/Crypto__e/fields/volume__c.field-meta.xml
<CustomField>
    <fullName>volume__c</fullName>
    <label>volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>